--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veterinaria Santa Margarita</title>
     <link href="estilos.css" rel="stylesheet" />
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&family=Quicksand&display=swap" rel="stylesheet"> </head>
 <body>
-    <h1>Registro de pacientes</h1>
-
+    <h1 class="tituloregistro">Registro de pacientes</h1>
+    <img src="img/vet1.jpg" style="border-radius: 10px; margin-top: 150px; margin-left: 60px; box-shadow: 3px 3px 3px gray;"/>
 <div class=formulario>
     <form action="" method="get">
 
