Creación de pagina index como home para facilitar la navegacion

--- a/horas.html
+++ b/horas.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&family=Quicksand&display=swap" rel="stylesheet">
 <body>
 
-    <div class=formulario>
+    <div class=formulario2>
         <form action="" method="get">
     
             <div class="descriptor">
@@ -36,7 +36,7 @@
                 <label for="correo">Correo</label></div>
             <div class="etiqueta">
                 <input type="email" id="correo" name="correo" />
-                <br>
+                <br><br>
        
             <div class="descriptor">
                 <label for="atencion">Tipo de atención</label></div>
