--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
 </head>
 <body>
-    <h1 class="tituloregistro">Administración Clínica Veterinaria Santa Margarita</h1>
-    <br>
+    <h1 class="tituloregistro">Administración Clínica 
+                        <br/>Veterinaria Santa Margarita</h1>
+    <br/>
 
-<img src="img/hospital_veterinario.jpg" style="margin: auto; text-align: center;"/>
-<br>
-<br>
+    <div class="portada">
+        <img src="img/hospital_veterinario.jpg" style="border-radius: 15px;"/>
+    </div>
 
-
-<a href="registro.html">
-<button>Registro de pacientes</button></a>
-
-<a href="horas.html">
-<button a="horas.html">Reserva de horas</button></a>
-
-<button> Consultar ficha clínica</button>
-
+    <div class="botonesinicio">
+        <a href="registro.html">
+        <button>Registro de pacientes</button></a>
+        <a href="horas.html">
+        <button a="horas.html">Reserva de horas</button></a>
+        <a href="fichas.html">
+        <button> Consultar ficha clínica</button></a>
+    </div>
 
 </body>
 </html>
