Agregado todo el sistema de navegación, finalizada la página de fichas, reordenados lso formularios y las imágenes, cambiada la imágen de portada, arreglada la página de registro, código ordenado por validator.

--- a/fichas.html
+++ b/fichas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,15 +12,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="fichas">
 
-    <h1> Fichas clínicas</h1>
+    <h1 class="tituloregistro"> Fichas clínicas</h1>
     
-    <div class="fichas">
-        Ingresar tabla con datos
-
-
+    <div class="contenedorfichas">
+        <table class="tabla">
+            <tr>
+                <th>Nombre Paciente</th>
+                <th>Nombre Tutor</th>
+                <th>Fecha de nac.</th>
+                <th>Especie</th>
+                <th>Raza</th>
+                <th>Género</th>
+                <th>Esterilizado</th>
+                <th>Peso</th>
+                <th>Motivo de consulta</th>
+                <th>Diagnóstico</th>
+                <th>Observaciones</th>
+            </tr>
+            <tr>
+                <td>Chocolo</td>
+                <td>María Rosas</td>
+                <td>25-08-2020</td>
+                <td>Canino</td>
+                <td>Akita</td>
+                <td>Macho</td>
+                <td>Si</td>
+                <td>2.5 Kg</td>
+                <td>Consulta por lesiones en la piel, se rasca mucho</td>
+                <td>Dermatitis atópica</td>
+                <td>Se dejá con tto antibiotico tópico por una semana</td>
+            </tr>
+            <tr>
+                <td>Pelusa</td>
+                <td>Jose Gutierrez</td>
+                <td>12-05-2016</td>
+                <td>Felino</td>
+                <td>Mestizo</td>
+                <td>Hembra</td>
+                <td>Si</td>
+                <td>5 Kg</td>
+                <td>Paciente hace 2 dias que no come</td>
+                <td>Alergia alimentaria</td>
+                <td>Se deriva a laboratorio para exámenes de sangre</td>
+            </tr>
+            <tr>
+                <td>Pepe</td>
+                <td>Clara Carvajal</td>
+                <td>18-03-2020</td>
+                <td>Otro</td>
+                <td>----</td>
+                <td>Hembra</td>
+                <td>No</td>
+                <td>450 Grs</td>
+                <td>Ave. Loro. Paciente cojea al caminar</td>
+                <td>Lesión traumática</td>
+                <td>Se aplica analgésico local, y se deja con indicaciones a la familia de cuidados de la lesión</td>
+            </tr>
+        </table>
     </div>
-    
+<div class="botones2">
+    <a href="index.html">
+    <button>Volver</button>
+    </a>
+</div>
+
 </body>
+
 </html>
