--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <h1 class="tituloregistro">Administración Clínica 
                         <br/>Veterinaria Santa Margarita</h1>
     <br/>
-
-    <div class="portada">
-        <img src="img/hospital_veterinario.jpg" style="border-radius: 15px;"/>
-    </div>
+        <div class="fachadadiv">
+            <img class="fachada" src="img/hospital.jpg" alt="fachada" />
+        </div>
+    <br/>
 
     <div class="botonesinicio">
         <a href="registro.html">
         <button>Registro de pacientes</button></a>
         <a href="horas.html">
-        <button a="horas.html">Reserva de horas</button></a>
+        <button>Reserva de horas</button></a>
         <a href="fichas.html">
-        <button> Consultar ficha clínica</button></a>
+        <button>Consultar ficha clínica</button></a>
     </div>
 
 </body>
