--- a/horas.html
+++ b/horas.html
@@ -101,6 +101,18 @@
             </div>
     </form>
     </div>
+
+    <br/><br/>
+
+    <div class="relleno"></div>
+
+    <div class="botones2">
     
+    
+    <a href="index.html">
+        <button>Volver</button>
+    </a>
+    </div>
+
 </body>
 </html>
