--- a/registro.html
+++ b/registro.html
@@ -10,7 +10,10 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&family=Quicksand&display=swap" rel="stylesheet"> </head>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&family=Quicksand&display=swap" rel="stylesheet"> 
+    <link rel="shortcut icon" href="img/huella.png"/>
+
+</head>
 
 <body class="registro">
     
